# portfolio_optimization

./: .gitignore  .pre-commit-config.yaml  README.md  enums.py  experiments.sh  generate_data.ipynb  mvo.ipynb  portfolio.py  pyproject.toml  qp_lambda.ipynb  requirements.txt  research_design.md  slsqp.ipynb  testing.ipynb
datasets/: basic.py  config.py
misc/: plots.ipynb  qp_v_slsqp.csv
optimizers/: mvo.py
research/: enums.py  interfaces.py  portfolio.py  utils.py
research/datasets/: __init__.py  basic.py  config.py  historical.py  synthetic.py
research/experiments/: experiment1.py  experiment10.py  experiment11.py  experiment12.py  experiment13.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  experiment7.py  experiment8.py  experiment9.py
research/optimizers/: __init__.py  engine.py  iter_miqp.py  iter_qp.py  miqp.py  qp.py  slsqp.py  two_stage_qp.py  two_stage_slsqp.py
