[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxopt>=1.3.2",
    "cvxpy>=1.6.0",
    "gurobipy>=12.0.0",
    "matplotlib>=3.9.2",
    "mypy>=1.13.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241009",
    "pre-commit>=4.0.1",
    "pyarrow>=18.0.0",
    "ruff>=0.7.4",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20240106",
    "yfinance>=0.2.49",
]

[tool.isort]
profile = "black"
known_first_party = ["research"]
known_third_party = ["numpy", "pandas", "matplotlib", "seaborn"]
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
